# pg2_oth

./: Makefile  cpp.md  style.md
abschluss/: .gdb_history  a.out  somedata.cc
by_example/: pastri02.cc
by_example/ch-01/: pastri03.cc  (+1 more)
ch1/: a.out  deep_copy.cpp  firend_vector.cpp  friend_vector.cpp
ch12/: a.out  filter.cpp  filter_lambda.cpp  filter_lambda_ptr.cpp
lua_basics/: knowledge.typ  meson.build
lua_basics/.cache/clangd/index/: app.cpp.71B7A09CF8D6C173.idx  app.hpp.20D7A510B4FFBC45.idx  core.cpp.3F6E57EFE9797117.idx  core.hpp.5447971755A266D5.idx  exprtk.hpp.AA9BB23960E5909D.idx  foo.cpp.07B0CB5B26142C58.idx  foo.hpp.6476F164F4165C21.idx  graphics.cpp.ED9E66A11F27797C.idx  graphics.hpp.83D0DAF05492D8F0.idx  main.cpp.B02B0B632831A9CA.idx  render.cpp.73D0A9920C706020.idx  render.hpp.D0D3377E13845054.idx  seq.cpp.1CA5C7CFD5786A56.idx  test_01.cpp.1D23C1AB1A5CE0BE.idx
lua_basics/scripts/: string.lua
lua_basics/src/: app.cpp  app.hpp  core.cpp  core.hpp  foo.cpp  foo.hpp  graphics.cpp  graphics.hpp  main.cpp  meson.build  render.cpp  render.hpp  render_types.hpp  test_01.cpp
patterns/: a.out  medium-observer.cpp  simple-observer.cpp  strong-observer.cpp
src/: cpp.cc  screencast_snippets.cc
test/: a.out  y_is_lua.lua
test/clean/: a.out  build.sh  meson.build  test.cpp  test_script.lua
test/clean/.cache/clangd/index/: test.cpp.4DC8B3F870463211.idx
test/clean/luajit_fin/lib/: libluajit-5.1.2.1.1760617492.dylib  libluajit-5.1.2.dylib
test/clean/luajit_fin/lib/pkgconfig/: luajit.pc
test/clean/luajit_fin/share/luajit-2.1/jit/: vmdef.lua
(+27 files in other folders)
